# doml-mc

./: POSIDONIA.doml  avg_benchmark.ipynb  benchmark.py  example.ipynb  pyproject.toml  test.ipynb  wordpress.doml  wordpress_example.py  wordpress_example_2.py  wordpress_example_2_perf.py  wordpress_json_example.doml
assets/: doml_meta.yaml  doml_meta.yml
doml_mc/intermediate_model/: application2im.py  concrete2im.py  doml_element.py  doml_model2im.py  infrastructure2im.py  metamodel.py  types.py
doml_mc/model/: application.py  concretization.py  doml_model.py  infrastructure.py
doml_mc/z3/: application.py  im_encoding.py  infrastructure.py  metamodel_encoding.py  utils.py  z3_doml_model.py
example_json_models/: POSIDONIA.doml  nginx-openstack_v2.doml  wordpress_json_example.doml  wordpress_json_no_iface.doml
tests/: test_doml_mc.py
