[tool.poetry]
name = "doml-mc"
version = "0.1.0"
description = ""
authors = ["Michele De Pascalis <michele.de.pascalis.1024@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
